--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,32 +1,5 @@
-name: CI
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r requirements.txt
-          python3 -m pip install pytest
-
-      - name: Run tests
-        run: |
-          python3 -m pytest -q
+- name: Install dependencies
+  run: |
+    python3 -m pip install --upgrade pip
+    if [ -f requirements.txt ]; then python3 -m pip install -r requirements.txt; fi
+    python3 -m pip install pytest
