--- a/project/github/workflows/ci.yml
+++ b/project/github/workflows/ci.yml
@@ -2,27 +2,37 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      # 1. Скачиваем код
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
+      # 2. Устанавливаем Python 3.11
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
+      # 3. Устанавливаем зависимости
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python3 -m pip install --upgrade pip
+          # Проверяем, есть ли requirements.txt, чтобы не падало
+          if [ -f requirements.txt ]; then python3 -m pip install -r requirements.txt; fi
+          # Устанавливаем pytest на всякий случай
+          python3 -m pip install pytest
 
+      # 4. Запускаем тесты
       - name: Run tests
         run: |
-          pytest -q
+          python3 -m pytest -q
