--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,20 +13,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # 1. Скачиваем код
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      # 2. Устанавливаем Python 3.11
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
+      # 3. Устанавливаем зависимости
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then python3 -m pip install -r requirements.txt; fi
           python3 -m pip install pytest
+          if [ -f requirements.txt ]; then python3 -m pip install -r requirements.txt; fi
 
+      # 4. Запускаем тесты
       - name: Run tests
-        run: |
-          python3 -m pytest -q
+        run: python3 -m pytest -q
