--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,21 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Скачиваем код
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # 2. Устанавливаем Python 3.11
-      - uses: actions/setup-python@v4
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      # 3. Устанавливаем зависимости
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install pytest
-          if [ -f requirements.txt ]; then python3 -m pip install -r requirements.txt; fi
+      - name: Install pytest
+        run: python3 -m pip install --upgrade pip pytest
 
-      # 4. Запускаем тесты
       - name: Run tests
         run: python3 -m pytest -q
